fixed spacing between waring

--- a/frontend/src/app/add-stock/add-stock.component.css
+++ b/frontend/src/app/add-stock/add-stock.component.css
@@ -2,3 +2,7 @@ button {
     float: right;
     margin-bottom: 1em;
 }
+
+.space-top {
+    margin-top: 0.40em;
+}
